--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,18 @@
   width: 70%;
   height: 350px;
   background-color: rgb(216, 124, 124);
+  border-radius: 15px;
+  color: rgb(182, 16, 16);
 }
 
 .form-control{
 width: 90%;
 border-radius: 10px;
-background-color: rgb(223, 180, 217);
-
+background-color: rgb(255, 255, 255);
 }
 
 .btn{
  border-radius: 10px;
-
 }
 
 .btn-sm{
